--- a/params/ydlidar.yaml
+++ b/params/ydlidar.yaml
@@ -6,18 +6,18 @@ ydlidar_ros2_driver_node:
     baudrate: 115200
     lidar_type: 1
     device_type: 0
-    sample_rate: 7
+    sample_rate: 3
     abnormal_check_count: 4
     fixed_resolution: true
-    reversion: true
+    reversion: false
     inverted: true
     auto_reconnect: true
     isSingleChannel: true
     intensity: false
     support_motor_dtr: true
-    angle_max: 180.0
-    angle_min: -180.0
-    range_max: 64.0
-    range_min: 0.01
-    frequency: 8.0
+    angle_max: 90.0
+    angle_min: -90.0
+    range_max: 8.0
+    range_min: 0.2
+    frequency: 7.0
     invalid_range_is_inf: false
