--- a/params/ydlidar.yaml
+++ b/params/ydlidar.yaml
@@ -9,14 +9,14 @@ ydlidar_ros2_driver_node:
     sample_rate: 3
     abnormal_check_count: 4
     fixed_resolution: true
-    reversion: false
+    reversion: true
     inverted: true
     auto_reconnect: true
     isSingleChannel: true
     intensity: false
     support_motor_dtr: true
-    angle_max: 90.0
-    angle_min: -90.0
+    angle_max: 180.0
+    angle_min: -180.0
     range_max: 8.0
     range_min: 0.2
     frequency: 7.0
